--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "mysql": "github:mysqljs/mysql",
     "next": "11.1.2",
     "react": "17.0.2",
