--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "javascript-time-ago": "^2.3.8",
     "mysql": "github:mysqljs/mysql",
+    "net": "^1.0.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
